--- a/portfolio.html
+++ b/portfolio.html
@@ -15,23 +15,10 @@
     <!-- PAGE HEADER -->
     <header class="header">
       <div class="container">
-        <nav class="navigation">
-          <a class="link logo header-logo" href="./index.html">Web<span>Studio</span></a>
+        <div class="header-inner">
+          <nav class="navigation">
+            <a class="link logo header-logo" href="./index.html">Web<span>Studio</span></a>
 
-          <button
-            type="button"
-            class="menu-button"
-            data-menu-button
-            aria-expanded="false"
-            aria-controls="menu-container"
-          >
-            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-              <use class="icon-cross" href="./img/sprite-main.svg#menu-cross"></use>
-              <use class="icon-menu" href="./img/sprite-main.svg#menu-burger"></use>
-            </svg>
-          </button>
-
-          <div class="menu-container" id="menu-container" data-menu>
             <ul class="navigation-list list">
               <li class="navigation-list-item">
                 <a class="link navigation-list-link" href="./index.html">Студия</a>
@@ -43,23 +30,60 @@
                 <a class="link navigation-list-link" href="./">Контакты</a>
               </li>
             </ul>
+          </nav>
 
-            <ul class="contact-list list">
-              <li class="contact-list-item">
-                <a class="link contact-list-link-tel" href="mailto:info@devstudio.com">
-                  <svg class="contact-list-icon" width="10" height="16">
-                    <use href="./img/sprite-main.svg#smartphone"></use>
-                  </svg>
-                  <span>+38 096 111 11 11</span>
-                </a>
+          <ul class="contact-list list">
+            <li class="contact-list-item">
+              <a class="link contact-list-link" href="mailto:info@devstudio.com">
+                <svg class="contact-list-icon-mail">
+                  <use href="./img/sprite-main.svg#envelope"></use>
+                </svg>
+                <span>info@devstudio.com</span>
+              </a>
+            </li>
+            <li class="contact-list-item">
+              <a class="link contact-list-link" href="tel:+380961111111">
+                <svg class="contact-list-icon-tel">
+                  <use href="./img/sprite-main.svg#smartphone"></use>
+                </svg>
+                <span>+38 096 111 11 11</span>
+              </a>
+            </li>
+          </ul>
+
+          <button type="button" class="menu-button" data-menu-button>
+            <svg width="40" height="40">
+              <use class="icon-menu" href="./img/sprite-main.svg#menu-burger"></use>
+            </svg>
+          </button>
+
+          <!-- * MOBILE MENU -->
+
+          <div class="mobile-menu mobile" data-menu>
+            <button type="button" class="menu-close-button" data-menu-close>
+              <svg width="40" height="40">
+                <use class="icon-cross" href="./img/sprite-main.svg#menu-cross"></use>
+              </svg>
+            </button>
+
+            <ul class="mobile-nav-list list">
+              <li class="mobile-nav-item">
+                <a class="link mobile-nav-link" href="./index.html">Студия</a>
               </li>
-              <li class="contact-list-item">
-                <a class="link contact-list-link-mail" href="mailto:info@devstudio.com">
-                  <svg class="contact-list-icon" width="16" height="12">
-                    <use href="./img/sprite-main.svg#envelope"></use>
-                  </svg>
-                  <span>info@devstudio.com</span>
-                </a>
+              <li class="mobile-nav-item">
+                <a class="link mobile-nav-link link-current" href="./">Портфолио</a>
+              </li>
+              <li class="mobile-nav-item">
+                <a class="link mobile-nav-link" href="./">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="mobile-contact-list list">
+              <li class="mobile-contact-item">
+                <a class="link mobile-contact-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+              <li class="mobile-contact-item">
+                <a class="link mobile-contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
             </ul>
 
@@ -78,7 +102,7 @@
               </li>
             </ul>
           </div>
-        </nav>
+        </div>
       </div>
     </header>
 
@@ -124,7 +148,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-tech.jpg, ./img/portfolio/mob-tech@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -159,7 +183,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-star.jpg, ./img/portfolio/mob-star@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -194,7 +218,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-seafood.jpg, ./img/portfolio/mob-seafood@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -233,7 +257,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-prime.jpg, ./img/portfolio/mob-prime@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -268,7 +292,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-boxes.jpg, ./img/portfolio/mob-boxes@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -303,7 +327,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-inspiration.jpg, ./img/portfolio/mob-inspiration@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -338,7 +362,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-limited.jpg, ./img/portfolio/mob-limited@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -377,7 +401,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-lab.jpg, ./img/portfolio/mob-lab@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
@@ -416,7 +440,7 @@
 
                     <source
                       srcset="./img/portfolio/mob-business.jpg, ./img/portfolio/mob-business@2x.jpg 2x"
-                      media="(min-width: 480px)"
+                      media="(min-width: 320px)"
                       type="image/jpeg"
                     />
 
